--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,12 @@ body {
   margin: 0 10rem;
   width: 80%;
 }
-
+ body::-webkit-scrollbar{
+  width:0.25rem;
+}
+body::-webkit-scrollbar-track{
+  background: #1e1e24;
+} 
 a {
   color: #ffe66d;
 }
